force-app/main/default/objects/Contact_Role__c/Contact_Role__c.object-meta.xml
<CustomObject>
    <description>This is a better version of the OpportunityContactRole because reps can send follow up emails using this object&apos;s list view button</description>
    <label>Opp Follow Up Contacts</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Follow Up Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>