force-app/main/default/objects/Contact_Role__c/fields/Days_Since_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Follow_Up__c</fullName>
    <formula>today()- Last_Follow_UP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Follow Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>