force-app/main/default/objects/Contact_Role__c/fields/EmailContact__c.field-meta.xml
<CustomField>
    <fullName>EmailContact__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>