force-app/main/default/objects/Contact_Role__c/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <formula>Opportunity__r.End_User_Lookup_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Account</label>
    <type>Text</type>
</CustomField>