force-app/main/default/objects/Contact_Role__c/fields/Last_Follow_UP__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_UP__c</fullName>
    <label>Last Follow Up</label>
    <type>Date</type>
</CustomField>