force-app/main/default/objects/Contact_Role__c/fields/Last_Follow_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the last person that clicked the &quot;Follow up with Email&quot; button. Allows us to send a copy to that person of each email.</description>
    <label>Last Follow Up By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opp_Follow_Up_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>