force-app/main/default/objects/Contact_Role__c/fields/Opp_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>Opp_CloseDate__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp CloseDate</label>
    <type>Date</type>
</CustomField>