force-app/main/default/objects/Contact_Role__c/fields/Opp_End_User__c.field-meta.xml
<CustomField>
    <fullName>Opp_End_User__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp End User</label>
    <type>Text</type>
</CustomField>