force-app/main/default/objects/Contact_Role__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>text(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage</label>
    <type>Text</type>
</CustomField>