force-app/main/default/objects/Contact_Role__c/fields/OppOwner__c.field-meta.xml
<CustomField>
    <fullName>OppOwner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName&amp;&apos; &apos;&amp;Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppOwner</label>
    <type>Text</type>
</CustomField>