force-app/main/default/objects/Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User Contact</fullName>
            </value>
            <value>
                <fullName>Reseller Contact</fullName>
            </value>
            <value>
                <fullName>Distributor Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>