force-app/main/default/objects/Contact_Role__c/fields/Send_Follow_Up_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Follow_Up_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to trigger email alert workflow</description>
    <label>Send Follow Up Email</label>
    <type>Checkbox</type>
</CustomField>