force-app/main/default/objects/Contact_Role__c/fields/Spa__c.field-meta.xml
<CustomField>
    <fullName>Spa__c</fullName>
    <formula>Opportunity__r.SPA_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa</label>
    <type>Text</type>
</CustomField>