force-app/main/default/objects/Contact_Role__c/fields/Within_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Within_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within 12 Months</label>
    <type>Checkbox</type>
</CustomField>