force-app/main/default/objects/Contact_Role__c/fields/Within_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Within_6_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within 6 Months</label>
    <type>Checkbox</type>
</CustomField>