force-app/main/default/objects/Contact_Role__c/listViews/My_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Open_Opportunities</fullName>
    <columns>Opportunity_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>EmailContact__c</columns>
    <columns>Role__c</columns>
    <columns>Title__c</columns>
    <columns>Send_Follow_Up_Email__c</columns>
    <columns>Last_Follow_UP__c</columns>
    <columns>Days_Since_Follow_Up__c</columns>
    <columns>CloseDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opp_Stage__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Opp_Stage__c</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <label>My Open Opportunities</label>
</ListView>